parser.output
Terminals unused in grammar

    COMENTARIO


Grammar

    0 $accept: programa $end

    1 programa: FUNCAO assinatura

    2 assinatura: nome_funcao args
    3           | nome_funcao TIPO tipo_funcao args

    4 tipo_funcao: CARACTERE
    5            | INTEIRO
    6            | REAL

    7 args: ARGS lista_vars FIMARGS codigo
    8     | codigo

    9 lista_vars: vars
   10           | lista_vars vars

   11 vars: tipo ID_OU_FUNC PONTO_E_VIRG
   12     | tipo ID_OU_FUNC VIRGULA vars_cont
   13     | tipo ID_OU_FUNC ATRIBUICAO atribuido

   14 vars_cont: ID_OU_FUNC VIRGULA vars_cont
   15          | ID_OU_FUNC PONTO_E_VIRG

   16 tipo: CARACTERE
   17     | INTEIRO
   18     | REAL

   19 codigo: vars codigo
   20       | ESCREVA LITERAL PONTO_E_VIRG codigo
   21       | ESCREVA ID_OU_FUNC PONTO_E_VIRG codigo
   22       | ID_OU_FUNC ATRIBUICAO atribuido codigo
   23       | CHAMA CHAMADA ID_OU_FUNC PONTO_E_VIRG codigo
   24       | se_entao codigo
   25       | ENQUANTO ABRE_PAR cond FECHA_PAR FACA codigo FIMENQUANTO codigo
   26       | RETORNA ID_OU_FUNC PONTO_E_VIRG codigo
   27       | FIMFUNCAO eof
   28       | FIMFUNCAO programa
   29       | %empty

   30 atribuido: LITERAL PONTO_E_VIRG
   31          | NUMERO PONTO_E_VIRG
   32          | ID_OU_FUNC OP_ARITMETICO LITERAL PONTO_E_VIRG
   33          | ID_OU_FUNC OP_ARITMETICO NUMERO PONTO_E_VIRG
   34          | ID_OU_FUNC OP_ARITMETICO ID_OU_FUNC PONTO_E_VIRG
   35          | CHAMA CHAMADA lista_id PONTO_E_VIRG

   36 lista_id: ID_OU_FUNC lista_id
   37         | %empty

   38 se_entao: SE ABRE_PAR cond FECHA_PAR ENTAO codigo senao_op FIMSE

   39 senao_op: SENAO codigo
   40         | %empty

   41 cond: ID_OU_FUNC OP_RELACIONAL ID_OU_FUNC
   42     | ID_OU_FUNC OP_RELACIONAL NUMERO
   43     | ID_OU_FUNC OP_RELACIONAL LITERAL
   44     | NUMERO OP_RELACIONAL ID_OU_FUNC
   45     | NUMERO OP_RELACIONAL NUMERO
   46     | NUMERO OP_RELACIONAL LITERAL
   47     | LITERAL OP_RELACIONAL ID_OU_FUNC
   48     | LITERAL OP_RELACIONAL NUMERO
   49     | LITERAL OP_RELACIONAL LITERAL

   50 nome_funcao: ID_OU_FUNC

   51 eof: FIM_DE_ARQ


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    FUNCAO <str> (258) 1
    FIMFUNCAO <str> (259) 27 28
    CHAMA <str> (260) 23 35
    RETORNA <str> (261) 26
    TIPO <str> (262) 3
    ARGS <str> (263) 7
    FIMARGS <str> (264) 7
    ESCREVA <str> (265) 20 21
    INTEIRO <str> (266) 5 17
    REAL <str> (267) 6 18
    CARACTERE <str> (268) 4 16
    SE <str> (269) 38
    ENTAO <str> (270) 38
    FIMSE <str> (271) 38
    ENQUANTO <str> (272) 25
    FACA <str> (273) 25
    FIMENQUANTO <str> (274) 25
    CHAMADA <str> (275) 23 35
    SENAO <str> (276) 39
    ID_OU_FUNC <str> (277) 11 12 13 14 15 21 22 23 26 32 33 34 36 41 42 43 44 47 50
    NUMERO <str> (278) 31 33 42 44 45 46 48
    LITERAL <str> (279) 20 30 32 43 46 47 48 49
    OP_RELACIONAL <str> (280) 41 42 43 44 45 46 47 48 49
    OP_ARITMETICO <str> (281) 32 33 34
    ATRIBUICAO <str> (282) 13 22
    ABRE_PAR <str> (283) 25 38
    FECHA_PAR <str> (284) 25 38
    VIRGULA <str> (285) 12 14
    PONTO_E_VIRG <str> (286) 11 15 20 21 23 26 30 31 32 33 34 35
    COMENTARIO <str> (287)
    FIM_DE_ARQ <str> (288) 51


Nonterminals, with rules where they appear

    $accept (34)
        on left: 0
    programa (35)
        on left: 1
        on right: 0 28
    assinatura (36)
        on left: 2 3
        on right: 1
    tipo_funcao (37)
        on left: 4 5 6
        on right: 3
    args (38)
        on left: 7 8
        on right: 2 3
    lista_vars (39)
        on left: 9 10
        on right: 7 10
    vars (40)
        on left: 11 12 13
        on right: 9 10 19
    vars_cont (41)
        on left: 14 15
        on right: 12 14
    tipo (42)
        on left: 16 17 18
        on right: 11 12 13
    codigo (43)
        on left: 19 20 21 22 23 24 25 26 27 28 29
        on right: 7 8 19 20 21 22 23 24 25 26 38 39
    atribuido (44)
        on left: 30 31 32 33 34 35
        on right: 13 22
    lista_id (45)
        on left: 36 37
        on right: 35 36
    se_entao (46)
        on left: 38
        on right: 24
    senao_op (47)
        on left: 39 40
        on right: 38
    cond (48)
        on left: 41 42 43 44 45 46 47 48 49
        on right: 25 38
    nome_funcao (49)
        on left: 50
        on right: 2 3
    eof (50)
        on left: 51
        on right: 27


State 0

    0 $accept: . programa $end

    FUNCAO  shift, and go to state 1

    programa  go to state 2


State 1

    1 programa: FUNCAO . assinatura

    ID_OU_FUNC  shift, and go to state 3

    assinatura   go to state 4
    nome_funcao  go to state 5


State 2

    0 $accept: programa . $end

    $end  shift, and go to state 6


State 3

   50 nome_funcao: ID_OU_FUNC .

    $default  reduce using rule 50 (nome_funcao)


State 4

    1 programa: FUNCAO assinatura .

    $default  reduce using rule 1 (programa)


State 5

    2 assinatura: nome_funcao . args
    3           | nome_funcao . TIPO tipo_funcao args

    FIMFUNCAO   shift, and go to state 7
    CHAMA       shift, and go to state 8
    RETORNA     shift, and go to state 9
    TIPO        shift, and go to state 10
    ARGS        shift, and go to state 11
    ESCREVA     shift, and go to state 12
    INTEIRO     shift, and go to state 13
    REAL        shift, and go to state 14
    CARACTERE   shift, and go to state 15
    SE          shift, and go to state 16
    ENQUANTO    shift, and go to state 17
    ID_OU_FUNC  shift, and go to state 18

    $default  reduce using rule 29 (codigo)

    args      go to state 19
    vars      go to state 20
    tipo      go to state 21
    codigo    go to state 22
    se_entao  go to state 23


State 6

    0 $accept: programa $end .

    $default  accept


State 7

   27 codigo: FIMFUNCAO . eof
   28       | FIMFUNCAO . programa

    FUNCAO      shift, and go to state 1
    FIM_DE_ARQ  shift, and go to state 24

    programa  go to state 25
    eof       go to state 26


State 8

   23 codigo: CHAMA . CHAMADA ID_OU_FUNC PONTO_E_VIRG codigo

    CHAMADA  shift, and go to state 27


State 9

   26 codigo: RETORNA . ID_OU_FUNC PONTO_E_VIRG codigo

    ID_OU_FUNC  shift, and go to state 28


State 10

    3 assinatura: nome_funcao TIPO . tipo_funcao args

    INTEIRO    shift, and go to state 29
    REAL       shift, and go to state 30
    CARACTERE  shift, and go to state 31

    tipo_funcao  go to state 32


State 11

    7 args: ARGS . lista_vars FIMARGS codigo

    INTEIRO    shift, and go to state 13
    REAL       shift, and go to state 14
    CARACTERE  shift, and go to state 15

    lista_vars  go to state 33
    vars        go to state 34
    tipo        go to state 21


State 12

   20 codigo: ESCREVA . LITERAL PONTO_E_VIRG codigo
   21       | ESCREVA . ID_OU_FUNC PONTO_E_VIRG codigo

    ID_OU_FUNC  shift, and go to state 35
    LITERAL     shift, and go to state 36


State 13

   17 tipo: INTEIRO .

    $default  reduce using rule 17 (tipo)


State 14

   18 tipo: REAL .

    $default  reduce using rule 18 (tipo)


State 15

   16 tipo: CARACTERE .

    $default  reduce using rule 16 (tipo)


State 16

   38 se_entao: SE . ABRE_PAR cond FECHA_PAR ENTAO codigo senao_op FIMSE

    ABRE_PAR  shift, and go to state 37


State 17

   25 codigo: ENQUANTO . ABRE_PAR cond FECHA_PAR FACA codigo FIMENQUANTO codigo

    ABRE_PAR  shift, and go to state 38


State 18

   22 codigo: ID_OU_FUNC . ATRIBUICAO atribuido codigo

    ATRIBUICAO  shift, and go to state 39


State 19

    2 assinatura: nome_funcao args .

    $default  reduce using rule 2 (assinatura)


State 20

   19 codigo: vars . codigo

    FIMFUNCAO   shift, and go to state 7
    CHAMA       shift, and go to state 8
    RETORNA     shift, and go to state 9
    ESCREVA     shift, and go to state 12
    INTEIRO     shift, and go to state 13
    REAL        shift, and go to state 14
    CARACTERE   shift, and go to state 15
    SE          shift, and go to state 16
    ENQUANTO    shift, and go to state 17
    ID_OU_FUNC  shift, and go to state 18

    $default  reduce using rule 29 (codigo)

    vars      go to state 20
    tipo      go to state 21
    codigo    go to state 40
    se_entao  go to state 23


State 21

   11 vars: tipo . ID_OU_FUNC PONTO_E_VIRG
   12     | tipo . ID_OU_FUNC VIRGULA vars_cont
   13     | tipo . ID_OU_FUNC ATRIBUICAO atribuido

    ID_OU_FUNC  shift, and go to state 41


State 22

    8 args: codigo .

    $default  reduce using rule 8 (args)


State 23

   24 codigo: se_entao . codigo

    FIMFUNCAO   shift, and go to state 7
    CHAMA       shift, and go to state 8
    RETORNA     shift, and go to state 9
    ESCREVA     shift, and go to state 12
    INTEIRO     shift, and go to state 13
    REAL        shift, and go to state 14
    CARACTERE   shift, and go to state 15
    SE          shift, and go to state 16
    ENQUANTO    shift, and go to state 17
    ID_OU_FUNC  shift, and go to state 18

    $default  reduce using rule 29 (codigo)

    vars      go to state 20
    tipo      go to state 21
    codigo    go to state 42
    se_entao  go to state 23


State 24

   51 eof: FIM_DE_ARQ .

    $default  reduce using rule 51 (eof)


State 25

   28 codigo: FIMFUNCAO programa .

    $default  reduce using rule 28 (codigo)


State 26

   27 codigo: FIMFUNCAO eof .

    $default  reduce using rule 27 (codigo)


State 27

   23 codigo: CHAMA CHAMADA . ID_OU_FUNC PONTO_E_VIRG codigo

    ID_OU_FUNC  shift, and go to state 43


State 28

   26 codigo: RETORNA ID_OU_FUNC . PONTO_E_VIRG codigo

    PONTO_E_VIRG  shift, and go to state 44


State 29

    5 tipo_funcao: INTEIRO .

    $default  reduce using rule 5 (tipo_funcao)


State 30

    6 tipo_funcao: REAL .

    $default  reduce using rule 6 (tipo_funcao)


State 31

    4 tipo_funcao: CARACTERE .

    $default  reduce using rule 4 (tipo_funcao)


State 32

    3 assinatura: nome_funcao TIPO tipo_funcao . args

    FIMFUNCAO   shift, and go to state 7
    CHAMA       shift, and go to state 8
    RETORNA     shift, and go to state 9
    ARGS        shift, and go to state 11
    ESCREVA     shift, and go to state 12
    INTEIRO     shift, and go to state 13
    REAL        shift, and go to state 14
    CARACTERE   shift, and go to state 15
    SE          shift, and go to state 16
    ENQUANTO    shift, and go to state 17
    ID_OU_FUNC  shift, and go to state 18

    $default  reduce using rule 29 (codigo)

    args      go to state 45
    vars      go to state 20
    tipo      go to state 21
    codigo    go to state 22
    se_entao  go to state 23


State 33

    7 args: ARGS lista_vars . FIMARGS codigo
   10 lista_vars: lista_vars . vars

    FIMARGS    shift, and go to state 46
    INTEIRO    shift, and go to state 13
    REAL       shift, and go to state 14
    CARACTERE  shift, and go to state 15

    vars  go to state 47
    tipo  go to state 21


State 34

    9 lista_vars: vars .

    $default  reduce using rule 9 (lista_vars)


State 35

   21 codigo: ESCREVA ID_OU_FUNC . PONTO_E_VIRG codigo

    PONTO_E_VIRG  shift, and go to state 48


State 36

   20 codigo: ESCREVA LITERAL . PONTO_E_VIRG codigo

    PONTO_E_VIRG  shift, and go to state 49


State 37

   38 se_entao: SE ABRE_PAR . cond FECHA_PAR ENTAO codigo senao_op FIMSE

    ID_OU_FUNC  shift, and go to state 50
    NUMERO      shift, and go to state 51
    LITERAL     shift, and go to state 52

    cond  go to state 53


State 38

   25 codigo: ENQUANTO ABRE_PAR . cond FECHA_PAR FACA codigo FIMENQUANTO codigo

    ID_OU_FUNC  shift, and go to state 50
    NUMERO      shift, and go to state 51
    LITERAL     shift, and go to state 52

    cond  go to state 54


State 39

   22 codigo: ID_OU_FUNC ATRIBUICAO . atribuido codigo

    CHAMA       shift, and go to state 55
    ID_OU_FUNC  shift, and go to state 56
    NUMERO      shift, and go to state 57
    LITERAL     shift, and go to state 58

    atribuido  go to state 59


State 40

   19 codigo: vars codigo .

    $default  reduce using rule 19 (codigo)


State 41

   11 vars: tipo ID_OU_FUNC . PONTO_E_VIRG
   12     | tipo ID_OU_FUNC . VIRGULA vars_cont
   13     | tipo ID_OU_FUNC . ATRIBUICAO atribuido

    ATRIBUICAO    shift, and go to state 60
    VIRGULA       shift, and go to state 61
    PONTO_E_VIRG  shift, and go to state 62


State 42

   24 codigo: se_entao codigo .

    $default  reduce using rule 24 (codigo)


State 43

   23 codigo: CHAMA CHAMADA ID_OU_FUNC . PONTO_E_VIRG codigo

    PONTO_E_VIRG  shift, and go to state 63


State 44

   26 codigo: RETORNA ID_OU_FUNC PONTO_E_VIRG . codigo

    FIMFUNCAO   shift, and go to state 7
    CHAMA       shift, and go to state 8
    RETORNA     shift, and go to state 9
    ESCREVA     shift, and go to state 12
    INTEIRO     shift, and go to state 13
    REAL        shift, and go to state 14
    CARACTERE   shift, and go to state 15
    SE          shift, and go to state 16
    ENQUANTO    shift, and go to state 17
    ID_OU_FUNC  shift, and go to state 18

    $default  reduce using rule 29 (codigo)

    vars      go to state 20
    tipo      go to state 21
    codigo    go to state 64
    se_entao  go to state 23


State 45

    3 assinatura: nome_funcao TIPO tipo_funcao args .

    $default  reduce using rule 3 (assinatura)


State 46

    7 args: ARGS lista_vars FIMARGS . codigo

    FIMFUNCAO   shift, and go to state 7
    CHAMA       shift, and go to state 8
    RETORNA     shift, and go to state 9
    ESCREVA     shift, and go to state 12
    INTEIRO     shift, and go to state 13
    REAL        shift, and go to state 14
    CARACTERE   shift, and go to state 15
    SE          shift, and go to state 16
    ENQUANTO    shift, and go to state 17
    ID_OU_FUNC  shift, and go to state 18

    $default  reduce using rule 29 (codigo)

    vars      go to state 20
    tipo      go to state 21
    codigo    go to state 65
    se_entao  go to state 23


State 47

   10 lista_vars: lista_vars vars .

    $default  reduce using rule 10 (lista_vars)


State 48

   21 codigo: ESCREVA ID_OU_FUNC PONTO_E_VIRG . codigo

    FIMFUNCAO   shift, and go to state 7
    CHAMA       shift, and go to state 8
    RETORNA     shift, and go to state 9
    ESCREVA     shift, and go to state 12
    INTEIRO     shift, and go to state 13
    REAL        shift, and go to state 14
    CARACTERE   shift, and go to state 15
    SE          shift, and go to state 16
    ENQUANTO    shift, and go to state 17
    ID_OU_FUNC  shift, and go to state 18

    $default  reduce using rule 29 (codigo)

    vars      go to state 20
    tipo      go to state 21
    codigo    go to state 66
    se_entao  go to state 23


State 49

   20 codigo: ESCREVA LITERAL PONTO_E_VIRG . codigo

    FIMFUNCAO   shift, and go to state 7
    CHAMA       shift, and go to state 8
    RETORNA     shift, and go to state 9
    ESCREVA     shift, and go to state 12
    INTEIRO     shift, and go to state 13
    REAL        shift, and go to state 14
    CARACTERE   shift, and go to state 15
    SE          shift, and go to state 16
    ENQUANTO    shift, and go to state 17
    ID_OU_FUNC  shift, and go to state 18

    $default  reduce using rule 29 (codigo)

    vars      go to state 20
    tipo      go to state 21
    codigo    go to state 67
    se_entao  go to state 23


State 50

   41 cond: ID_OU_FUNC . OP_RELACIONAL ID_OU_FUNC
   42     | ID_OU_FUNC . OP_RELACIONAL NUMERO
   43     | ID_OU_FUNC . OP_RELACIONAL LITERAL

    OP_RELACIONAL  shift, and go to state 68


State 51

   44 cond: NUMERO . OP_RELACIONAL ID_OU_FUNC
   45     | NUMERO . OP_RELACIONAL NUMERO
   46     | NUMERO . OP_RELACIONAL LITERAL

    OP_RELACIONAL  shift, and go to state 69


State 52

   47 cond: LITERAL . OP_RELACIONAL ID_OU_FUNC
   48     | LITERAL . OP_RELACIONAL NUMERO
   49     | LITERAL . OP_RELACIONAL LITERAL

    OP_RELACIONAL  shift, and go to state 70


State 53

   38 se_entao: SE ABRE_PAR cond . FECHA_PAR ENTAO codigo senao_op FIMSE

    FECHA_PAR  shift, and go to state 71


State 54

   25 codigo: ENQUANTO ABRE_PAR cond . FECHA_PAR FACA codigo FIMENQUANTO codigo

    FECHA_PAR  shift, and go to state 72


State 55

   35 atribuido: CHAMA . CHAMADA lista_id PONTO_E_VIRG

    CHAMADA  shift, and go to state 73


State 56

   32 atribuido: ID_OU_FUNC . OP_ARITMETICO LITERAL PONTO_E_VIRG
   33          | ID_OU_FUNC . OP_ARITMETICO NUMERO PONTO_E_VIRG
   34          | ID_OU_FUNC . OP_ARITMETICO ID_OU_FUNC PONTO_E_VIRG

    OP_ARITMETICO  shift, and go to state 74


State 57

   31 atribuido: NUMERO . PONTO_E_VIRG

    PONTO_E_VIRG  shift, and go to state 75


State 58

   30 atribuido: LITERAL . PONTO_E_VIRG

    PONTO_E_VIRG  shift, and go to state 76


State 59

   22 codigo: ID_OU_FUNC ATRIBUICAO atribuido . codigo

    FIMFUNCAO   shift, and go to state 7
    CHAMA       shift, and go to state 8
    RETORNA     shift, and go to state 9
    ESCREVA     shift, and go to state 12
    INTEIRO     shift, and go to state 13
    REAL        shift, and go to state 14
    CARACTERE   shift, and go to state 15
    SE          shift, and go to state 16
    ENQUANTO    shift, and go to state 17
    ID_OU_FUNC  shift, and go to state 18

    $default  reduce using rule 29 (codigo)

    vars      go to state 20
    tipo      go to state 21
    codigo    go to state 77
    se_entao  go to state 23


State 60

   13 vars: tipo ID_OU_FUNC ATRIBUICAO . atribuido

    CHAMA       shift, and go to state 55
    ID_OU_FUNC  shift, and go to state 56
    NUMERO      shift, and go to state 57
    LITERAL     shift, and go to state 58

    atribuido  go to state 78


State 61

   12 vars: tipo ID_OU_FUNC VIRGULA . vars_cont

    ID_OU_FUNC  shift, and go to state 79

    vars_cont  go to state 80


State 62

   11 vars: tipo ID_OU_FUNC PONTO_E_VIRG .

    $default  reduce using rule 11 (vars)


State 63

   23 codigo: CHAMA CHAMADA ID_OU_FUNC PONTO_E_VIRG . codigo

    FIMFUNCAO   shift, and go to state 7
    CHAMA       shift, and go to state 8
    RETORNA     shift, and go to state 9
    ESCREVA     shift, and go to state 12
    INTEIRO     shift, and go to state 13
    REAL        shift, and go to state 14
    CARACTERE   shift, and go to state 15
    SE          shift, and go to state 16
    ENQUANTO    shift, and go to state 17
    ID_OU_FUNC  shift, and go to state 18

    $default  reduce using rule 29 (codigo)

    vars      go to state 20
    tipo      go to state 21
    codigo    go to state 81
    se_entao  go to state 23


State 64

   26 codigo: RETORNA ID_OU_FUNC PONTO_E_VIRG codigo .

    $default  reduce using rule 26 (codigo)


State 65

    7 args: ARGS lista_vars FIMARGS codigo .

    $default  reduce using rule 7 (args)


State 66

   21 codigo: ESCREVA ID_OU_FUNC PONTO_E_VIRG codigo .

    $default  reduce using rule 21 (codigo)


State 67

   20 codigo: ESCREVA LITERAL PONTO_E_VIRG codigo .

    $default  reduce using rule 20 (codigo)


State 68

   41 cond: ID_OU_FUNC OP_RELACIONAL . ID_OU_FUNC
   42     | ID_OU_FUNC OP_RELACIONAL . NUMERO
   43     | ID_OU_FUNC OP_RELACIONAL . LITERAL

    ID_OU_FUNC  shift, and go to state 82
    NUMERO      shift, and go to state 83
    LITERAL     shift, and go to state 84


State 69

   44 cond: NUMERO OP_RELACIONAL . ID_OU_FUNC
   45     | NUMERO OP_RELACIONAL . NUMERO
   46     | NUMERO OP_RELACIONAL . LITERAL

    ID_OU_FUNC  shift, and go to state 85
    NUMERO      shift, and go to state 86
    LITERAL     shift, and go to state 87


State 70

   47 cond: LITERAL OP_RELACIONAL . ID_OU_FUNC
   48     | LITERAL OP_RELACIONAL . NUMERO
   49     | LITERAL OP_RELACIONAL . LITERAL

    ID_OU_FUNC  shift, and go to state 88
    NUMERO      shift, and go to state 89
    LITERAL     shift, and go to state 90


State 71

   38 se_entao: SE ABRE_PAR cond FECHA_PAR . ENTAO codigo senao_op FIMSE

    ENTAO  shift, and go to state 91


State 72

   25 codigo: ENQUANTO ABRE_PAR cond FECHA_PAR . FACA codigo FIMENQUANTO codigo

    FACA  shift, and go to state 92

